# cumulative_timer

./: .gitignore  Makefile  README.md  docker-compose.yml  sample.env
backend/: Cargo.toml
backend/docker/: Dockerfile
backend/migrations/2020-09-06-045845_create_users/: up.sql
backend/migrations/2020-09-20-122916_create_timers/: down.sql  up.sql
backend/migrations/2020-09-20-123259_create_tags/: up.sql
backend/migrations/2020-09-20-123424_create_records/: up.sql
backend/migrations/2020-09-23-092300_create_tags_timers/: down.sql  up.sql
backend/src/: cors.rs  db.rs  main.rs  models.rs  schema.rs
backend/src/controllers/: users.rs
frontend/: package.json
frontend/docker/: Dockerfile
frontend/src/components/: UserList.vue
frontend/src/views/: Home.vue
postgres/init/: 1_create_db.sql
