[package]
name = "backend"
version = "0.1.0"
authors = ["fuurin-noimin"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json"] }
diesel = { version = "1.4.5", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
